<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/backgroud"
        tools:context=".Singup">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:src="@drawable/user"/>
    <EditText

            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/colorWhit"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorWhit"
            android:textSize="16sp"
            />

    <EditText
            android:id="@+id/password1_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorWhit"
            android:textSize="16sp"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />
    <EditText
            android:id="@+id/password2_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorWhit"
            android:textSize="16sp"
            android:hint="@string/confirme_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            />

    <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSucces"
            android:textColor="@color/colorWhit"
            android:textSize="18sp"
            android:layout_marginTop="55dp"
            android:text="@string/action_sign_in"
           />
    <Button
            android:id="@+id/acceuil_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorWhit"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:text="@string/accueil"
            />
</LinearLayout>